# creative-agent-deploy

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile.fly  LICENSE  README.md  conductor.json  fly.toml  main.py  mypy.ini  pyproject.toml  pytest.ini  zeabur.json
.github/workflows/: ci.yml  link-check.yml
examples/: README.md  web-component-grid.html
scripts/: convert_to_adcp_dicts.py  test_card_rendering.py
src/creative_agent/: __init__.py  api_server.py  compat.py  http_server.py  server.py  storage.py  utils.py  validation.py
src/creative_agent/data/: format_types.py  standard_formats.py
src/creative_agent/renderers/: __init__.py  base.py  format_card_renderer.py  image_renderer.py  product_card_renderer.py
src/creative_agent/schemas/: __init__.py  brand_card.py  build.py  format_helpers.py  library.py  manifest.py  preview.py
src/creative_agent/static/: rendered-creative.js
tests/: __init__.py
tests/integration/: test_preview_creative.py  test_preview_creative.py.bak  test_preview_creative.py.bak2  test_preview_html_and_batch.py  test_template_formats.py  test_tool_response_formats.py
tests/schema_compliance/: test_format_schema_compliance.py
tests/schemas/v1/: _schemas_v1_adagents_json.json  _schemas_v1_core_assets_audio-asset_json.json  _schemas_v1_core_assets_css-asset_json.json  _schemas_v1_core_assets_daast-asset_json.json  _schemas_v1_core_assets_html-asset_json.json  _schemas_v1_core_assets_image-asset_json.json  _schemas_v1_core_assets_javascript-asset_json.json  _schemas_v1_core_assets_text-asset_json.json  _schemas_v1_core_assets_url-asset_json.json  _schemas_v1_core_assets_vast-asset_json.json  _schemas_v1_core_assets_video-asset_json.json  _schemas_v1_core_assets_webhook-asset_json.json  _schemas_v1_core_brand-manifest-ref_json.json  _schemas_v1_core_brand-manifest_json.json  _schemas_v1_core_creative-asset_json.json  _schemas_v1_core_creative-assignment_json.json  _schemas_v1_core_creative-manifest_json.json  _schemas_v1_core_creative-policy_json.json  _schemas_v1_core_error_json.json  _schemas_v1_core_format-id_json.json  _schemas_v1_core_format_json.json  _schemas_v1_core_promoted-offerings_json.json  _schemas_v1_core_promoted-products_json.json  _schemas_v1_core_property_json.json  _schemas_v1_core_response_json.json  _schemas_v1_core_sub-asset_json.json  _schemas_v1_creative_asset-types_index_json.json  _schemas_v1_creative_list-creative-formats-request_json.json  _schemas_v1_creative_list-creative-formats-response_json.json  _schemas_v1_creative_preview-creative-request_json.json  _schemas_v1_creative_preview-creative-response_json.json  _schemas_v1_creative_preview-render_json.json  _schemas_v1_enums_channels_json.json  _schemas_v1_enums_creative-status_json.json  _schemas_v1_enums_delivery-type_json.json  _schemas_v1_enums_frequency-cap-scope_json.json  _schemas_v1_enums_identifier-types_json.json  _schemas_v1_enums_media-buy-status_json.json  _schemas_v1_enums_pacing_json.json  _schemas_v1_enums_package-status_json.json  (+6 more)
tests/smoke/: __init__.py  test_server_startup.py
tests/unit/: test_filter_formats.py  test_format_card_renderer.py  test_info_card_formats.py  test_preview_generation.py  test_product_card_renderer.py  test_storage_error_handling.py
tests/validation/: __init__.py  test_asset_validation.py  test_discriminator_validation.py  test_template_parameter_validation.py
